--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
     <link href="style/main.css" rel="stylesheet"/>
     <link href="style/leaflet_mods.css" rel="stylesheet"/>
 
-    <script src="js/b21_task_planner.js"> </script>
+    <script src="js/b21_task_planner.js"> </script> <!-- De// *****************************************************************
+fines B21TaskPlanner class -->
 
 <script>
+
+// This global var will contain an instance of B21TaskPlanner class
 var b21_task_planner;
 
-// REQUIRED - this function is added as an 'onClick' to popup menu items
-function menuitem(str) {
-    console.log("calling page menuitem with ",str);
-    b21_task_planner[str]();
-}
+// ******************************************************************
+// Page click callback functions -- route the call to B21TaskPlanner
+// ******************************************************************
 
 function change_wp_name(new_value) {
     b21_task_planner.change_wp_name(new_value);
@@ -42,10 +43,15 @@ function loaded() {
 <body onload="loaded()">
     <div class="header">
         <div class="title">B21 Task Planner [<a href="help.html">help</a>]</div>
-        <div class="units"></div>
     </div>
 
     <div id="panes">
+        <div id="buttons">
+            <button onclick="b21_task_planner.reset()">Reset</button>
+            <button onclick="b21_task_planner.download()">Download</button>
+            <button id="elevation_units" onclick="b21_task_planner.toggle_elevation_units()">Elevation in feet</button>
+            <button id="distance_units" onclick="b21_task_planner.toggle_distance_units()">Distance in Km</button>
+        </div>
         <div id="left_pane">
             <div id="task_list"></div>
         </div> <!-- end left_pane -->
