--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ function loaded() {
         </div>
         <div id="left_pane">
             <div id="task_list"></div>
+            <div id="drop_zone">DROP MSFS FLIGHT PLAN HERE</div>
         </div> <!-- end left_pane -->
         <div id="map_pane">
             <div id="map"></div>
