--- a/index.html
+++ b/index.html
@@ -21,18 +21,6 @@
 // This global var will contain an instance of B21TaskPlanner class
 var b21_task_planner;
 
-// ******************************************************************
-// Page click callback functions -- route the call to B21TaskPlanner
-// ******************************************************************
-
-function change_wp_name(new_value) {
-    b21_task_planner.change_wp_name(new_value);
-}
-
-function change_wp_alt(new_value) {
-    b21_task_planner.change_wp_alt(new_value);
-}
-
 function loaded() {
     b21_task_planner = new B21TaskPlanner();
     b21_task_planner.init();
@@ -50,6 +38,7 @@ function loaded() {
             <button onclick="b21_task_planner.reset()">Reset Task</button>
             <button onclick="b21_task_planner.download()">Download FlightPlan</button>
             <button onclick="b21_task_planner.update_elevations()">Update elevations</button>
+            <button onclick="b21_task_planner.reset_map()">Zoom to task</button>
             <button id="elevation_units" onclick="b21_task_planner.toggle_elevation_units()">Elevation in feet</button>
             <button id="distance_units" onclick="b21_task_planner.toggle_distance_units()">Distance in Km</button>
         </div>
