settings select. WP icao option.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@ function loaded() {
             <div id="map"></div>
         </div>
         <div id="settings">
-            <div id="settings_heading">Settings</div>
+            <div id="settings_heading">
+                <div id="settings_heading_text">Settingsx</div>
+                <button onclick="b21_task_planner.close_settings()">Close Settings</button>
+            </div>
             <div class="setting">
                 <div class="setting_name">Altitude Units</div>
                 <div class="setting_options">
