--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="style/main.css" rel="stylesheet"/>
     <link href="style/leaflet_mods.css" rel="stylesheet"/>
 
+    <script src="js/semicircle.js"></script>
     <script src="js/b21_geo_static.js"> </script> <!-- Defines Geo functions (static) -->
     <script src="js/b21_task_planner.js"> </script> <!-- Defines B21TaskPlanner class -->
 
@@ -33,7 +34,7 @@ function loaded() {
     <div class="header">
         <div class="title">
             <div class="title_text">B21 Task Planner</div>
-            <div class="title_task_option">Soaring task: <input id="soaring_task_option_checkbox" type="checkbox" onclick="b21_task_planner.click_soaring_task_option(this)" checked/></div>
+            <div class="title_task_option">Soaring task: <input id="soaring_task_checkbox" type="checkbox" onclick="b21_task_planner.click_soaring_task(this)" checked/></div>
         </div>
     </div>
 
@@ -48,7 +49,7 @@ function loaded() {
     <div id="panes">
         <div id="left_pane">
             <div id="task_list"></div>
-            <div id="drop_zone">DROP MSFS FLIGHT PLAN HERE</div>
+            <div id="drop_zone">CLICK MAP TO START, OR DROP MSFS FLIGHT PLAN HERE</div>
         </div> <!-- end left_pane -->
         <div id="map_pane">
             <div id="map"></div>
