builds MSFS FlightPlan

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html translate="no">
 <meta name="google" content="notranslate" />
+<!-- this line is required to get Javascript to default to UTF-8 -->
+<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
 <head>
     <title>B21 Task Planner</title>
 
