--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function loaded() {
         <button onclick="b21_task_planner.update_elevations()">Update elevations</button>
         <button onclick="b21_task_planner.reset_map()">Zoom to task</button>
         <button onclick="b21_task_planner.toggle_settings()">Settings</button>
-        <form style="display: inline;" action="help.html" target="_blank"><button type="submit">Help</button></form>
+        <form style="display: inline;" action="help/help.html" target="_blank"><button type="submit">Help</button></form>
     </div>
     <div id="panes">
         <div id="left_pane">
