SkyVector button. Help extended.

--- a/help/help.html
+++ b/help/help.html
@@ -124,12 +124,45 @@ used the program.
 
 <img src="images/download.png"/>
 
-<h2>Creating a Flight Plan from scratch</h2>
+<h2>Looking up the airport ICAO code, or looking for airports.</h2>
 
 <p>The Flight Plan MUST begin and end with an airport, and for these you MUST know the ICAO code to enter into the
-    waypoint data. The easiest way to find the ICAO code for the airport (e.g. LOWZ for Zell am See airport) is to use the World Map
+    waypoint data. one easy way to find the ICAO code for the airport (e.g. LOWZ for Zell am See airport) is to use the World Map
     page in MSFS, and that will also give you the runway names if you want to specify one for the departure (you should,
-    so the plane is facing into wind).
+    so the plane is facing into wind). Also B21 Task Planner has the [SkyVector] button described below.
+</p>
+
+<p>If you have an existing Flight Plan containing the airports you're interested in, you can simply drag-and-drop that
+    onto the Drop Zone and those waypoints will be imported.
+</p>
+
+<p>The [SkyVector] button will open a new tab in your browser, with the SkyVector map lined up the same as the map
+    within B21 Task Planner.
+</p>
+<p>So first navigate to the airport of interest on the map in B21 Task Planner, the example below shows
+    Blairstown NJ:
+</p>
+
+<img src="images/blairstown.png"/>
+
+<p>Then click the [SkyVector] button. A new tab opens, and you can see Blairstown Airport also centered on
+    the SkyVector map with the ICAO code (1N7) shown next to the airport name:
+</p>
+
+<img src="images/skyvector.png"/>
+
+<p>Given the "1N7" code for Blairstown Airport, you can click the SkyVector [Airports] button, put "1N7"
+    (or Blairstown) into the search box, and you will get the Airport information page including the
+    runways "07" and "25" (top-left of page):
+</p>
+
+<img src="images/1n7.png"/>
+
+<h2>Creating a Flight Plan from scratch</h2>
+
+<p>So using the SkyVector button described above, or MSFS, lookup the ICAO code for your 'Departure' airport (in this
+    case Zell am See (LOWZ) and click on the airport on the map, adding the ICAO code and also a departure runway if
+    you have a code for that (in this case "26"):
 </p>
 
 <img src="images/LOWZ.png"/>
