--- a/help/help.html
+++ b/help/help.html
@@ -178,6 +178,11 @@ used the program.
 
 <img src="images/WP2.png"/>
 
+<p>Note you can <i>drag the waypoints around</i> which means you can 'draft' a task keeping the map at a fixed scale enabling
+you to see the whole task, and then you can zoom in on individual waypoints and drag them to the exact point you want them e.g.
+the windward end of the runway often makes sense for finish waypoints.
+</p>
+
 <p>At this point you have pretty much caught up with the example given before with a loaded MSFS Flight Plan, and
     the editting of waypoint radius, and min/max altitudes is the same.
 </p>
@@ -212,7 +217,7 @@ used the program.
     </tr>
 </table>
 
-<h2>The MSFS .pln format, with extensions for the soaring parameters</h2>
+<h2>TECH APPENDIX: The MSFS .pln format, with extensions for the soaring parameters</h2>
 
 <p>To pass these additional parameters through to MSFS and the aircraft, while ensuring the flight plan remains completely compatible
     with 'plain vanilla' MSFS, the B21 Task Planner encodes the additional parameters into the <i>name</i> assigned to the waypoint.
