airports csv data

--- a/help/help.html
+++ b/help/help.html
@@ -180,7 +180,7 @@ used the program.
 
 <p>Note you can <i>drag the waypoints around</i> which means you can 'draft' a task keeping the map at a fixed scale enabling
 you to see the whole task, and then you can zoom in on individual waypoints and drag them to the exact point you want them e.g.
-the windward end of the runway often makes sense for finish waypoints.
+the downwind end of the runway often makes sense for finish waypoints.
 </p>
 
 <p>At this point you have pretty much caught up with the example given before with a loaded MSFS Flight Plan, and
