--- a/help/help.html
+++ b/help/help.html
@@ -40,6 +40,11 @@
     displayed in the cockpit as "Burnt Cabins".
 </p>
 
+<img width="24%" src="images/task_start_finish.png"/>
+<img width="24%" src="images/topo.png"/>
+<img width="24%" src="images/streetmap.png"/>
+<img width="24%" src="images/satellite.png"/>
+
 <h2>General Hints</h2>
 
 <p>Most of these hints relate to the fact that MSFS ignores much of the information in the Flight Plan, e.g. it will take
