--- a/help/help.html
+++ b/help/help.html
@@ -129,23 +129,28 @@ used the program.
 
 <img src="images/download.png"/>
 
-<h2>Looking up the airport ICAO code, or looking for airports.</h2>
+<h2>Setting the start and finish airport.</h2>
 
 <p>The Flight Plan MUST begin and end with an airport, and for these you MUST know the ICAO code to enter into the
-    waypoint data. one easy way to find the ICAO code for the airport (e.g. LOWZ for Zell am See airport) is to use the World Map
+    waypoint data. The B21 Task Planner includes an airports database with ICAO codes but be aware MSFS has its own
+    database so there may be differences. One easy way to find the ICAO code for the airport (e.g. LOWZ for Zell
+    am See airport) is to use the World Map
     page in MSFS, and that will also give you the runway names if you want to specify one for the departure (you should,
-    so the plane is facing into wind). Also B21 Task Planner has the [SkyVector] button described below.
+    so the plane is facing into wind).
 </p>
 
 <p>If you have an existing Flight Plan containing the airports you're interested in, you can simply drag-and-drop that
     onto the Drop Zone and those waypoints will be imported.
 </p>
 
+<h3>Using SkyVector</h3>
+
 <p>The [SkyVector] button will open a new tab in your browser, with the SkyVector map lined up the same as the map
     within B21 Task Planner.
 </p>
 <p>So first navigate to the airport of interest on the map in B21 Task Planner, the example below shows
-    Blairstown NJ:
+    Blairstown NJ - you'll notice the Task Planner database includes Blairstown so at this point you could click
+    on it and this exercise would be complete, but let's continue with the SkyVector exercise...
 </p>
 
 <img src="images/blairstown.png"/>
@@ -165,14 +170,14 @@ used the program.
 
 <h2>Creating a Flight Plan from scratch</h2>
 
-<p>So using the SkyVector button described above, or MSFS, lookup the ICAO code for your 'Departure' airport (in this
-    case Zell am See (LOWZ) and click on the airport on the map, adding the ICAO code and also a departure runway if
-    you have a code for that (in this case "26"):
+<p>Here we will click on the existing Zell am See airport displayed on the map, adding the ICAO code.
+    We can also add a departure runway. <b>Note that MSFS will accept cardinal values, e.g. EAST or SOUTHWEST for the
+    runway.</b>
 </p>
 
 <img src="images/LOWZ.png"/>
 
-<p>Now is a useful time to lookup the destination airport and add that:
+<p>Now is a useful time to add the destination airport - that only takes one click:
 </p>
 
 <img src="images/LOWI.png"/>
