URL pln= for web flightplan, bearing in task list

--- a/help/help.html
+++ b/help/help.html
@@ -14,9 +14,20 @@
     with three clicks on a map. The soaring tasks are created as 'standard' MSFS Flight Plans.
 </p>
 
-<p>B21 Task Planner has TWO ways to get started with a Flight Plan:</p>
+<p>B21 Task Planner has THREE ways to get started with a Flight Plan:</p>
 <ol>
-    <li>Drag an existing MSFS .pln file onto the DROP ZONE.</li>
+    <li>Drag an existing MSFS .pln file onto the DROP ZONE. This is useful if you have the .PLN file on your local PC.</li>
+    <li>Add the web URL of a .PLN file as <div class="code inline">?pln=https://...etc...</div> to the end of the task planner URL, e.g. click this:
+        <div class="code">
+        <a target="_blank"
+          href="https://xp-soaring.github.io/tasks/b21_task_planner/index.html?pln=https://xp-soaring.github.io/tasks/b21_task_planner/flightplans/Mifflin_Day1.pln">
+            https://xp-soaring.github.io/tasks/b21_task_planner/index.html?pln=https://xp-soaring.github.io/tasks/b21_task_planner/flightplans/Mifflin_Day1.pln
+        </a>
+        </div>
+        <p>
+        This is useful if you want to put a link on your website which displays an existing MSFS flight plan you have on that website.
+        </p>
+    </li>
     <li>Just start clicking on the map.</li>
 </ol>
 
