--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function loaded() {
 <body onload="loaded()">
     <div class="header">
         <div class="title">
-            <div class="title_text">B21 Task Planner v1.10</div>
+            <div class="title_text">B21 Task Planner v1.20</div>
             <div class="title_task_option">Soaring task: <input id="soaring_task_checkbox" type="checkbox" onclick="b21_task_planner.click_soaring_task(this)" checked/></div>
         </div>
     </div>
@@ -65,7 +65,7 @@ function loaded() {
         </div>
         <div id="settings">
             <div id="settings_heading">
-                <div id="settings_heading_text">Settingsx</div>
+                <div id="settings_heading_text">Ooops! Something went wrong</div>
                 <button onclick="b21_task_planner.close_settings()">Close Settings</button>
             </div>
             <div class="setting">
