speed added to baro chart

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@ function loaded() {
                 </div>
             </div>
             <div class="setting">
+                <div class="setting_name">Speed Units</div>
+                <div class="setting_options">
+                    <div id="setting_speed_units_kph" onclick="b21_task_planner.set_speed_units_kph()" class="setting_option">Kph</div>
+                    <div id="setting_speed_units_feet" onclick="b21_task_planner.set_speed_units_knots()" class="setting_option">Knots</div>
+                </div>
+            </div>
+            <div class="setting">
                 <div class="setting_name">Distance Units</div>
                 <div class="setting_options">
                     <div id="setting_distance_units_km" onclick="b21_task_planner.set_distane_units_km()" class="setting_option">Kilometers</div>
