--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
     <title>B21 Task Planner</title>
 
+    <!-- Leaflet, the OpenStreetMap API -->
+    <link href="style/leaflet_mods.css" rel="stylesheet"/> <!-- our local tweaks to the map CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin=""/>
@@ -12,16 +14,21 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
+    <script src="js/semicircle.js"></script> <!-- 3rd-party mod to add semicircles to Leaflet -->
 
-    <link href="style/main.css" rel="stylesheet"/>
-    <link href="style/leaflet_mods.css" rel="stylesheet"/>
-
+    <!-- Highcharts used to draw the baro/speed chart -->
     <script src="js/highcharts.js"></script>
     <link href="style/highcharts.css" rel="stylesheet"/>
 
-    <script src="js/semicircle.js"></script>
-    <script src="js/b21_geo_static.js"> </script> <!-- Defines Geo functions (static) -->
-    <script src="js/b21_task_planner.js"> </script> <!-- Defines B21TaskPlanner class -->
+    <!-- Main app CSS -->
+    <link href="style/main.css" rel="stylesheet"/>
+
+    <script src="js/b21_geo_static.js"> </script>   <!-- Geo: Defines Geo functions (static) -->
+    <script src="js/b21_track_log.js"> </script>    <!-- TrackLog: Supports GPX files -->
+    <script src="js/b21_wp.js"> </script>           <!-- WP: internal representation of a gliding waypoint -->
+    <script src="js/b21_task.js"> </script>         <!-- Task: internal representation of a gliding task from FlightPlan -->
+    <script src="js/b21_flight_plan.js"> </script>  <!-- FlightPlan: Supports PLN files -->
+    <script src="js/b21_task_planner.js"> </script> <!-- B21TaskPlanner: the main app class -->
 <script>
 
 // This global var will contain an instance of B21TaskPlanner class
