check start/finish on airports, search WIP

--- a/help/help.html
+++ b/help/help.html
@@ -11,7 +11,8 @@
 <img src="images/overview.png"/>
 
 <p>We want to create <i>soaring tasks</i> in MSFS as simply as possible, e.g. a three-waypoint task could be created
-    with three clicks on a map. The soaring tasks are created as 'standard' MSFS Flight Plans.
+    with three clicks on a map. The soaring tasks are created as 'standard' MSFS Flight Plans, with
+    <a href="https://www.youtube.com/watch?v=QS7iGN_Lw4Y">a good example here</a>.
 </p>
 
 <p>B21 Task Planner has THREE ways to get started with a Flight Plan:</p>
@@ -64,8 +65,11 @@ than accepting what is in the Flight Plan. For intermediate waypoints MSFS will 
 altitude in the Flight Plan and generate an estimate of the altitude it thinks the autopilot should be flying at instead.
 </p>
 
-<p><b>(1)</b> Always start and end the flightplan with an airport. For these you will need the ICAO code, and for the departure airport
-    it is possible to specify a launch runway but you will need to look the name for this in MSFS (e.g. "26" or "06L").
+<p><b>(1)</b> Always start and end the flightplan with an AIRPORT. For these you will need the ICAO code, and for the departure airport
+    it is possible to specify a launch runway but you will need to look the name for this in MSFS (e.g. "26" or "06L"). Confusingly
+    you cannot label those airports as the START or FINISH of the soaring task because of the way MSFS treats that data. Instead you
+    can create another 'user' waypoint nearby (e.g. at the downwind end of the runway) and flag that as the finish e.g.
+    <a href="https://www.youtube.com/watch?v=QS7iGN_Lw4Y&t=496s">here</a>.
 </p>
 
 <p><b>(2)</b> Generally it is better to have Start and Finish waypoints that are other than the departure and destination airports. They
