--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function loaded() {
 <body onload="loaded()">
     <div class="header">
         <div class="title">
-            <div class="title_text">B21 Task Planner v1.22</div>
+            <div class="title_text">B21 Task Planner v1.30</div>
             <div class="title_task_option">Soaring task: <input id="soaring_task_checkbox" type="checkbox" onclick="b21_task_planner.click_soaring_task(this)" checked/></div>
         </div>
     </div>
@@ -64,6 +64,14 @@ function loaded() {
         </a>
         <button onclick="b21_task_planner.toggle_settings()">Settings</button>
         <form style="display: inline;" action="help/help.html" target="_blank"><button type="submit">Help</button></form>
+        <div id="search">
+            <input id="search_input" type="text" width="10" placeholder="Search" onkeyup="b21_task_planner.search()"/>
+            <div id="search_results">
+                <div class="search_result">Duxford</div>
+                <div class="search_result">Stansted Airport</div>
+                <div class="search_result">Heathrow</div>
+            </div>
+        </div>
     </div>
     <div id="panes">
         <div id="left_pane">
