search WIP, B21_Airports class

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href="css/main.css" rel="stylesheet"/>
 
     <script src="js/b21_geo_static.js"> </script>   <!-- Geo: Defines Geo functions (static) -->
+    <script src="js/b21_airports.js"> </script>     <!-- B21_Airports: loads airport data -->
     <script src="js/b21_track_log.js"> </script>    <!-- B21_TrackLog: Supports GPX files -->
     <script src="js/b21_wp.js"> </script>           <!-- B21_WP: internal representation of a gliding waypoint -->
     <script src="js/b21_task.js"> </script>         <!-- B21_Task: internal representation of a gliding task from FlightPlan -->
