--- a/index.html
+++ b/index.html
@@ -85,14 +85,15 @@ function loaded() {
         <div id="left_pane">
             <div id="left_pane_tabs">
                 <a id="tab_task" class="tab_active" href="#" onclick="b21_task_planner.tab_task()">Task Info</a>
-                <a id="tab_tracklogs" class="tab_inactive" href="#" onclick="b21_task_planner.tab_tracklogs()">Tracklogs Info</a>
+                <a id="tab_tracklogs" class="tab_inactive" href="#" onclick="b21_task_planner.tab_tracklogs()">Tracklogs</a>
+                <a id="tab_tracklog" class="tab_inactive" href="#" onclick="b21_task_planner.tab_tracklog()">Tracklog Info</a>
             </div>
             <div id="task_list"></div>
             <div id="drop_zone">CLICK MAP TO START, OR DROP MSFS FLIGHT PLAN HERE</div>
         </div> <!-- end left_pane -->
         <div id="right_pane">
             <div id="map"></div>
-            <div id="barograph"></div>
+            <div id="charts"></div>
         </div>
         <div id="settings">
             <div id="settings_heading">
