--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function loaded() {
                 <a id="tab_tracklogs" class="tab_inactive" href="#" onclick="b21_task_planner.tab_tracklogs()">Tracklogs</a>
                 <a id="tab_tracklog" class="tab_inactive" href="#" onclick="b21_task_planner.tab_tracklog()">Tracklog Info</a>
             </div>
-            <div id="task_list"></div>
+            <div id="task_info"></div>
             <div id="drop_zone">CLICK MAP TO START, OR DROP MSFS FLIGHT PLAN HERE</div>
         </div> <!-- end left_pane -->
         <div id="right_pane">
