--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href="css/main.css" rel="stylesheet"/>
 
     <script src="js/b21_geo_static.js"> </script>   <!-- Geo: Defines Geo functions (static) -->
+    <script src="js/b21_settings.js"> </script>     <!-- B21_Settings: loads localStorage settings e.g. units -->
     <script src="js/b21_airports.js"> </script>     <!-- B21_Airports: loads airport data -->
     <script src="js/b21_track_log.js"> </script>    <!-- B21_TrackLog: Supports GPX files -->
     <script src="js/b21_wp.js"> </script>           <!-- B21_WP: internal representation of a gliding waypoint -->
@@ -89,6 +90,8 @@ function loaded() {
                 <a id="tab_tracklog" class="tab_inactive" href="#" onclick="b21_task_planner.tab_tracklog()">Tracklog Info</a>
             </div>
             <div id="task_info"></div>
+            <div id="tracklogs_info">TRACKLOGS</div>
+            <div id="tracklog_info">TRACKLOG_INFO</div>
             <div id="drop_zone">CLICK MAP TO START, OR DROP MSFS FLIGHT PLAN HERE</div>
         </div> <!-- end left_pane -->
         <div id="right_pane">
