tracklog_info WIP

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ function loaded() {
             <div id="task_info"></div>
             <div id="tracklogs_info">TRACKLOGS</div>
             <div id="tracklog_info">
+                <div id="tracklog_info_header"></div>
                 <div id="tracklog_info_task">TASK</div>
-                <div id="tracklog_info_segment">SEGMENT</div>
-                <div id="tracklog_info_point">POINT</div>
+                <div id="tracklog_info_selected">SELECTED</div>
             </div>
             <div id="drop_zone">CLICK MAP TO START, OR DROP MSFS FLIGHT PLAN HERE</div>
         </div> <!-- end left_pane -->
