Added XCSoar .tsk to help info

--- a/help/help.html
+++ b/help/help.html
@@ -17,7 +17,7 @@
 
 <p>B21 Task Planner has THREE ways to get started with a Flight Plan:</p>
 <ol>
-    <li>Drag an existing MSFS .pln file onto the DROP ZONE. This is useful if you have the .PLN file on your local PC.</li>
+    <li>Drag an existing MSFS .pln or XCsoar .tsk file onto the DROP ZONE. This is useful if you have the .PLN file on your local PC.</li>
     <li>Add the web URL of a .PLN file as <div class="code inline">?pln=https://...etc...</div> to the end of the task planner URL, e.g. click this:
         <div class="code">
         <a target="_blank"
@@ -99,7 +99,7 @@ altitude in the Flight Plan and generate an estimate of the altitude it thinks t
     the units you've chosen for altitudes and distances, and the map location and zoom.
 </p>
 
-<h2>An example starting with an existing MSFS Flight Plan</h2>
+<h2>An example starting with an existing MSFS .pln Flight Plan (or XCSoar .tsk)</h2>
 
 <p>We'll use an example starting with an existing flightplan as apart from the first step (the 'drop') the use of the
 program is the same as if you'd clicked on the map to create the waypoints.
